--- a/index.html
+++ b/index.html
@@ -1,225 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Parcel Sandbox</title>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- google fonts -->
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-<!-- font-awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<!-- carasoule -->
-<link rel="stylesheet" href="src/stylesheets/owl.carousel.min.css" type="text/css">
-
-<!-- stylesheet -->
-<link rel="stylesheet" href="src/sass/styles.css" type="text/css">
-</head>
-<body>
-
-
-<!-- navigation bar -->
-<header role="banner">
-<div class="common__container">
-
-<div id="block-axe-branding" class="site-branding__logo"> <img src="https://www.axelerant.com/themes/custom/axe/logo.svg"/> </a></div>
-
-<div class="mobile-header-buttons">
-<a class="cta-chat" href="#">
-<i class="fa fa-comment" aria-hidden="true"></i>
-</a>
-<a href="javascript:void(0);" class="cta-menu">
-<i class="fa fa-bars" aria-hidden="true"></i>
-</a>
-</div>
-
-
-<nav id="navigation" class="navigation">
-<ul class="menu">
-<li class="menu-item"><a href=#>About</a></li>
-<li class="menu-item"><a href=#>Service</a></li>
-<li class="menu-item"><a href=#>Solutions</a></li>
-<li class="menu-item"><a href=#>Blog</a></li>
-<li class="menu-item menu-contact-us"><a href=#> <i class="fa fa-comment"></i>  Get in Touch </a></li>
-
-</ul>
-</nav>
-
-</div>
-</header><!-- navigation bar -->
-  
-
-<main role="main">
-
-
-<!-- banner -->
-<section class="banner">
-<div class="banner__box">
-<h1>We help agencies engineer digital experiences.</h1>
-
-<div class="banner-box-container">
-
-<div class="banner-box-item">
-<img src="src/images/1.svg"/>
-<p>Service Name</p>
-</div>
-
-<div class="banner-box-item">
-<img src="src/images/1.svg"/>
-<p>Service Name</p>
-</div>
-
-<div class="banner-box-item">
-<img src="src/images/1.svg"/>
-<p>Service Name</p>
-</div>
-
-
-</div>
-
-
-
-
-</div>
-</section><!-- banner -->
-
-
-<!-- Description text -->
-<section class="description">
-<div class="common__container">
-
-<div class="common-container-box">
-<h2>Text generators add a bit of comic relief to your web designs. They aren’t for every situation </h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-</div>
-<div class="common-container-box">
-<img class="fluid" src="src/images/map.PNG"/>
-</div>
-
-
-</div>
-</section><!-- Description text -->
-
-
-<!-- Testimonials -->
-<section class="testimonials">
-<div class="testimonials__container">
-<div class="testimonials__box">
-
-<h2>Testimonials</h2>
-
-<div class="owl-carousel owl-theme testimonials-box-carasolue">
-
-<div class="item">
-<div class="card">
-<p><img class="card-image-quote" src="src/images/double-quotes.png"/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's. </p>
-</div>
-<div class="card__image">
-<img alt="testimonial_users" src="src/images/icon.png"/>
-<p class="card-image-author">Client Name  <br/> <span class="card-image-author-desig">Position, ORG</span></p>
-</div>
-</div>
-
-<div class="item">
-<div class="card">
-<p><img class="card-image-quote" src="src/images/double-quotes.png"/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-</div>
-
-<div class="card__image">
-<img alt="testimonial_users" src="src/images/icon.png"/>
-<p class="card-image-author">Client Name  <br/> <span class="card-image-author-desig">Position, ORG</span></p>
-</div>
-
-</div>
-
-<div class="item">
-<div class="card">
-<p><img class="card-image-quote" src="src/images/double-quotes.png"/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer. </p>
-</div>
-
-<div class="card__image">
-<img alt="testimonial_users" src="src/images/icon.png"/>
-<p class="card-image-author">Client Name  <br/> <span class="card-image-author-desig">Position, ORG</span></p>
-</div>
-
-</div>
-
-
-</div>
-
-
-</div>
-</div>
-</section>
-
-
-<!-- Contact us -->
-<section class="contact">
-<div class="contact__container">
-<h2>Convinced To Work With Us?</h2>
-<p class="mt-0">Company has helped agenices keep their promises to client since 2005.</p>
-
-<form>
-<div class="contact-container-box">
-
-<div> <input placeholder="Fullname" type="text" id="firstname"/> </div>
-<div><input placeholder="Email Address" type="email" id="email"/></div>
-<div><input placeholder="Phone Number" type="text" id="pnumber"/></div>
-
-<div class="contact-container-grid-box">
-<textarea placeholder="Message in brief" id="message" rows="5"></textarea>
-</div>
-
-</div>
-
-
-<div class="contact-container-grid-box">
-<a class="button" href="#">Submit</a>
-</div>
-
-
-</form>
-
-
-
-</div>
-</section>
-
-
-
-
-
-<!-- footer -->
-<footer role="contactinfo">
-<div class="common__container">
-
-<div class="common-container-box">
-<p class="copyright">© 2017 Axelerant. All Rights Reserved.</p>
-</div>
-
-<div class="common-container-box text-right">
-<p class="social-icons">Follow us on: 
-<a href="#"><i class="fa fa-facebook"></i></a> 
-<a href="#"><i class="fa fa-twitter"></i></a> 
-<a href="#"><i class="fa fa-linkedin"></i></a> 
-</p>
-</div>
-
-
-</div>
-</footer>
-
-
-
-
-</main> <!-- main -->
-
-
-<script src="src/js/jquery.min.js"></script>
-<script src="src/js/owl.carousel.min.js"></script>
-<script src="src/js/index.js"></script>
-</body>
+  <head>
+    <title>Javascript Basics</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="src/sass/styles.css" type="text/css" />
+  </head>
+  <body>
+    <h1>Template Literals</h1>
+    <p id="biodata"></p>
+
+    <script src="index.js"></script>
+  </body>
 </html>
