--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <h1>Template Literals</h1>
-    <p id="biodata"></p>
+    <p id="Template_literal"></p>
+
+    <h2>Object Literals</h2>
+    <p id="object_literal"></p>
 
     <script src="index.js"></script>
   </body>
