--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script src="Array.js"></script>
     <script src="Object_Literals.js"></script>
     <script src="Tempate_Literals.js"></script>
+    <script src="Conitional_comparision.js"></script>
   </body>
 </html>
