--- a/JS_Fundamentals.html
+++ b/JS_Fundamentals.html
@@ -13,9 +13,14 @@
     <h1>Template Literals</h1>
     <p id="Template_literal"></p>
 
+    <h1>Loop</h1>
+    <p id="loop"></p>
+
     <script src="Array.js"></script>
     <script src="Object_Literals.js"></script>
     <script src="Tempate_Literals.js"></script>
     <script src="Conitional_comparision.js"></script>
+    <script src="loop.js"></script>
+    <script src="function.js"></script>
   </body>
 </html>
